samples/_failures_safe/1761526490_f03128_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1895862f.c: In function ‘main’:
./samples/SAFE/__tmp_1895862f.c:147:82: error: expected ‘)’ at end of input
  147 |     size_t decompressed_size = decompress_rle(compressed_buf.data, compressed_buf
      |                                              ~                                   ^
      |                                                                                  )
./samples/SAFE/__tmp_1895862f.c:147:68: error: incompatible type for argument 2 of ‘decompress_rle’
  147 |     size_t decompressed_size = decompress_rle(compressed_buf.data, compressed_buf
      |                                                                    ^~~~~~~~~~~~~~
      |                                                                    |
      |                                                                    Buffer
./samples/SAFE/__tmp_1895862f.c:78:58: note: expected ‘size_t’ {aka ‘long unsigned int’} but argument is of type ‘Buffer’
   78 | size_t decompress_rle(const unsigned char *input, size_t input_len, unsigned char *output, size_t output_capacity) {
      |                                                   ~~~~~~~^~~~~~~~~
./samples/SAFE/__tmp_1895862f.c:147:32: error: too few arguments to function ‘decompress_rle’
  147 |     size_t decompressed_size = decompress_rle(compressed_buf.data, compressed_buf
      |                                ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_1895862f.c:78:8: note: declared here
   78 | size_t decompress_rle(const unsigned char *input, size_t input_len, unsigned char *output, size_t output_capacity) {
      |        ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_1895862f.c:147:5: error: expected declaration or statement at end of input
  147 |     size_t decompressed_size = decompress_rle(compressed_buf.data, compressed_buf
      |     ^~~~~~
